--- a/package.json
+++ b/package.json
@@ -23,50 +23,50 @@
     "game"
   ],
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@types/classnames": "^2.2.9",
-    "@types/history": "^4.7.3",
+    "@babel/core": "7.12.3",
+    "@types/classnames": "2.2.10",
+    "@types/history": "4.7.8",
     "@types/node": "14.14.5",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router": "^5.1.5",
-    "@types/redux-actions": "^2.6.1",
-    "@types/webpack": "^4.41.0",
-    "@types/webpack-env": "^1.15.1",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
+    "@types/react": "16.9.54",
+    "@types/react-dom": "16.9.9",
+    "@types/react-redux": "7.1.9",
+    "@types/react-router": "5.1.8",
+    "@types/redux-actions": "2.6.1",
+    "@types/webpack": "4.41.23",
+    "@types/webpack-env": "1.15.3",
+    "babel-loader": "8.1.0",
+    "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.0.0-beta.11",
-    "mini-css-extract-plugin": "^0.9.0",
-    "postcss": "^7.0.25",
-    "postcss-browser-reporter": "^0.6.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-reporter": "^6.0.1",
-    "postcss-url": "^8.0.0",
-    "prettier": "^2.0.2",
-    "react-hot-loader": "^4.12.18",
-    "redux-devtools-extension": "^2.13.8",
+    "file-loader": "6.2.0",
+    "html-loader": "1.3.2",
+    "html-webpack-plugin": "4.5.0",
+    "mini-css-extract-plugin": "0.9.0",
+    "postcss": "7.0.35",
+    "postcss-browser-reporter": "0.6.0",
+    "postcss-import": "12.0.1",
+    "postcss-loader": "3.0.0",
+    "postcss-preset-env": "6.7.0",
+    "postcss-reporter": "6.0.1",
+    "postcss-url": "8.0.0",
+    "prettier": "2.1.2",
+    "react-hot-loader": "4.13.0",
+    "redux-devtools-extension": "2.13.8",
     "style-loader": "2.0.0",
     "ts-loader": "8.0.7",
     "typescript": "4.0.5",
-    "url-loader": "^4.0.0",
+    "url-loader": "4.1.1",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
+    "classnames": "2.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-redux": "^7.1.1",
-    "react-router": "^5.1.2",
-    "redux": "^4.0.5",
-    "redux-actions": "^2.6.5",
-    "redux-thunk": "^2.3.0"
+    "react-redux": "7.2.2",
+    "react-router": "5.2.0",
+    "redux": "4.0.5",
+    "redux-actions": "2.6.5",
+    "redux-thunk": "2.3.0"
   }
 }
