--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
+    "eslint": "7.12.1",
+    "eslint-config-airbnb-typescript-prettier": "3.1.0",
     "file-loader": "6.2.0",
     "html-loader": "1.3.2",
     "html-webpack-plugin": "4.5.0",
