--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
     "@types/react-redux": "7.1.9",
-    "@types/react-router": "5.1.8",
+    "@types/react-router-dom": "5.1.6",
     "@types/redux-actions": "2.6.1",
     "@types/webpack": "4.41.24",
     "@types/webpack-env": "1.15.3",
@@ -65,7 +65,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
-    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
     "redux-thunk": "2.3.0"
