--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "postcss-url": "8.0.0",
     "prettier": "2.1.2",
     "react-hot-loader": "4.13.0",
+    "react-svg": "11.1.0",
     "redux-devtools-extension": "2.13.8",
     "style-loader": "2.0.0",
     "ts-loader": "8.0.7",
