--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "strictNullChecks": false,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "sourceMap": true,
