--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/redux-actions": "2.6.1",
     "@types/webpack": "4.41.24",
     "@types/webpack-env": "1.15.3",
+    "@types/yup": "0.29.9",
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
@@ -62,6 +63,7 @@
   },
   "dependencies": {
     "classnames": "2.2.6",
+    "formik": "2.2.4",
     "normalize.css": "8.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -69,6 +71,7 @@
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "yup": "0.29.3"
   }
 }
