[GOTY-25] внёс правки

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.tsx",
   "scripts": {
     "start": "webpack-dev-server --mode development --hot --progress --color --port 3000 --open",
-    "build": "webpack -p --progress --colors"
+    "build": "webpack -p --progress --colors",
+    "lint": "eslint src/**/*.{ts,js} --quiet",
+    "lint:fix": "eslint src/**/*.{ts,js} --quiet --fix"
   },
   "repository": {
     "type": "git",
