--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@babel/preset-react": "7.12.5",
     "@types/classnames": "2.2.11",
     "@types/history": "4.7.8",
+    "@types/jest": "26.0.16",
     "@types/node": "14.14.6",
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.6",
+    "@types/react-test-renderer": "17.0.0",
     "@types/redux-actions": "2.6.1",
+    "@types/redux-mock-store": "1.0.2",
     "@types/webpack": "4.41.24",
     "@types/webpack-env": "1.15.3",
     "@types/yup": "0.29.9",
@@ -55,7 +58,9 @@
     "prettier": "2.1.2",
     "react-hot-loader": "4.13.0",
     "redux-devtools-extension": "2.13.8",
+    "redux-mock-store": "1.5.4",
     "style-loader": "2.0.0",
+    "ts-jest": "26.4.4",
     "ts-loader": "8.0.7",
     "typescript": "4.0.5",
     "url-loader": "4.1.1",
