--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-airbnb-typescript-prettier": "3.1.0",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.5.0",
+    "jest": "26.6.3",
     "mini-css-extract-plugin": "0.9.0",
     "postcss": "7.0.35",
     "postcss-browser-reporter": "0.6.0",
@@ -57,6 +58,7 @@
     "postcss-url": "8.0.0",
     "prettier": "2.1.2",
     "react-hot-loader": "4.13.0",
+    "react-test-renderer": "17.0.1",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
     "style-loader": "2.0.0",
