--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/webpack": "4.41.24",
     "@types/webpack-env": "1.15.3",
     "@types/yup": "0.29.9",
+    "babel-jest": "26.6.3",
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
