--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --mode development --hot --progress --color --port 3000 --open",
     "build": "webpack -p --progress --colors",
     "lint": "eslint src/**/*.{ts,js} --quiet",
-    "lint:fix": "eslint src/**/*.{ts,js} --quiet --fix"
+    "lint:fix": "eslint src/**/*.{ts,js} --quiet --fix",
+    "test": "jest --no-cache"
   },
   "repository": {
     "type": "git",
