--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint": "7.12.1",
     "eslint-config-airbnb-typescript-prettier": "3.1.0",
     "file-loader": "6.2.0",
+    "history": "5.0.0",
     "html-webpack-plugin": "4.5.0",
     "jest": "26.6.3",
     "mini-css-extract-plugin": "0.9.0",
