--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "dependencies": {
+    "@types/react-transition-group": "4.4.0",
     "axios": "0.21.0",
     "classnames": "2.2.6",
     "express": "4.17.1",
@@ -86,6 +87,7 @@
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-svg-loader": "3.0.3",
+    "react-transition-group": "4.4.1",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
     "redux-thunk": "2.3.0",
