--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@babel/core": "7.12.3",
     "@babel/preset-react": "7.12.5",
     "@types/classnames": "2.2.11",
+    "@types/compression": "1.7.0",
+    "@types/express": "4.17.9",
     "@types/history": "4.7.8",
     "@types/jest": "26.0.16",
     "@types/node": "14.14.6",
@@ -75,18 +77,21 @@
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
+    "webpack-node-externals": "2.5.2",
     "workbox-webpack-plugin": "5.1.4"
   },
   "dependencies": {
     "@types/react-transition-group": "4.4.0",
     "axios": "0.21.0",
     "classnames": "2.2.6",
+    "compression": "1.7.4",
     "express": "4.17.1",
     "formik": "2.2.4",
     "normalize.css": "8.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
+    "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-svg-loader": "3.0.3",
     "react-transition-group": "4.4.1",
