--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jest": "26.6.3",
     "mini-css-extract-plugin": "0.9.0",
     "nodemon": "2.0.6",
+    "null-loader": "4.0.1",
     "postcss": "7.0.35",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "12.0.1",
