--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Top game",
   "main": "main.tsx",
   "scripts": {
-    "start": "webpack --mode=development --watch",
-    "server": "nodemon app.js",
+    "start:webpack": "webpack --mode=development --watch",
+    "start:server": "nodemon app.js --watch build/server.js",
+    "start": "NODE_ENV=development npm-run-all --print-label --parallel start:*",
     "build": "webpack -p --progress --colors",
     "lint": "eslint src/**/*.{ts,js} --quiet",
     "lint:fix": "eslint src/**/*.{ts,js} --quiet --fix",
@@ -57,6 +58,7 @@
     "jest": "26.6.3",
     "mini-css-extract-plugin": "0.9.0",
     "nodemon": "2.0.6",
+    "npm-run-all": "4.1.5",
     "null-loader": "4.0.1",
     "postcss": "7.0.35",
     "postcss-browser-reporter": "0.6.0",
