--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
   "devDependencies": {
     "@babel/core": "7.12.3",
     "@babel/preset-react": "7.12.5",
+    "@types/body-parser": "1.19.0",
     "@types/classnames": "2.2.11",
     "@types/compression": "1.7.0",
+    "@types/cookie-parser": "1.4.2",
     "@types/express": "4.17.9",
     "@types/history": "4.7.8",
     "@types/jest": "26.0.16",
+    "@types/jsonwebtoken": "8.5.0",
     "@types/node": "14.14.6",
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
@@ -86,10 +89,13 @@
   "dependencies": {
     "@types/react-transition-group": "4.4.0",
     "axios": "0.21.0",
+    "body-parser": "1.19.0",
     "classnames": "2.2.6",
     "compression": "1.7.4",
+    "cookie-parser": "1.4.5",
     "express": "4.17.1",
     "formik": "2.2.4",
+    "jsonwebtoken": "8.5.1",
     "normalize.css": "8.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
