--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "sourceMap": true,
-    "target": "es5",
+    "target": "es6",
     "jsx": "react",
     "module": "es6",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "declaration": false,
     "removeComments": true,
     "noImplicitReturns": true,
