--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "express": "4.17.1",
     "formik": "2.2.4",
     "jsonwebtoken": "8.5.1",
+    "mongoose": "5.11.13",
     "normalize.css": "8.0.1",
     "pg": "8.5.1",
     "react": "17.0.1",
