--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "classnames": "2.2.6",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "formik": "2.2.4",
     "jsonwebtoken": "8.5.1",
