[GOTY-59] поправил логирующую функцию

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,7 @@
-DB_HOST=postgres
-DB_PORT=15432
-DB_NAME=gotydb
-DB_USER=gotyuser
-DB_PASSWORD=gotypass
+DB_HOST=host
+DB_PORT=5432
+DB_NAME=name
+DB_USER=user
+DB_PASSWORD=password
 
-MONGO_DB=mongodb://mongo:37017/gotydb
-MONGO_DB_PORT=37017
+MONGO_DB=mongodb://mongo:27017/name
