[GOTY-61] поменял целевую ветку для сборки

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,7 +1,7 @@
 name: Push goty to kotosha registry
 on:
   push:
-    branches: ["stable"]
+    branches: ["main"]
 jobs:
   check-bats-version:
     name: Push Docker image to Docker Hub
