--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: "3.1"
 
 services:
   postgres:
@@ -20,7 +20,7 @@ services:
       - 8080:8080
 
   app:
-    build: .
+    image: kotosha/goty
     depends_on:
       - postgres
       - mongo
