Доработал гитхаб-экшен

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,19 +3,24 @@ on:
   push:
     branches: ["main"]
 jobs:
-  check-bats-version:
+  push-docker-image:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Build image and push to Docker Hub
-        uses: docker/build-push-action@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: kotosha/goty
-          tag_with_ref: true
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      - name: Build and push image to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: kotosha/goty:latest
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
         with:
