--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,16 @@ services:
     image: mongo
     restart: always
 
-  adminer:
-    image: adminer
+  nginx:
+    image: nginx
     restart: always
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./certificate_full_chain.pem:/etc/nginx/ssl/cert.pem
+      - ./private_key.pem:/etc/nginx/ssl/key.pem
     ports:
-      - 8080:8080
+      - 80:80
+      - 443:443
 
   app:
     image: kotosha/goty
@@ -25,8 +30,6 @@ services:
       - postgres
       - mongo
     restart: always
-    ports:
-      - 5000:5000
     environment:
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
